# ESP32_STM32_programmer

./: .gitignore  AGENTS.md  FIRMWARE_FILE_STORAGE.md  FLASH_ERASE.md  MASS_ERASE.md  PC_READ.md  README.md  READ_AND_WRITE_TRANSITIONS.md  READ_FLASH.md  SIMULATOR.md  The_Engineers_Guide_to_SWD_for_STM32.md  UPLOAD_FIRMWARE.md  WIFI_CONFIG.md  build_and_upload.py  convert_bin.py  erase_flash_simulation.csv  generate_product_info.c  partitions_firmware_fs_8MB.csv  platformio.ini  read_flash_simulation.csv  read_simulation.csv  read_simulation.html  read_then_write_simulation.csv  read_then_write_simulation.html  read_then_write_simulation_idle10.csv  read_then_write_simulation_idle10.html  read_then_write_simulation_idle2.csv  read_then_write_simulation_idle2.html  reset_and_switch_to_swd_simulation.csv  reset_and_switch_to_swd_simulation.html  servomotor_M17_fw0.14.0.0_scc3_hw1.5.firmware  servomotor_M17_fw0.14.0.1_scc3_hw1.5.firmware  servomotor_M17_fw0.14.1.1_scc3_hw1.5.firmware  signals.csv  signals.html  sim_debug.txt  test.sh  test_swd.py  waveforms.html  waveforms_read_simulation.html  (+9 more)
include/: product_info.h  wifi_secrets.h
lib/Servomotor/: Communication.cpp
plans/: MODES.md
sim/: CMakeLists.txt  binary.h  erase_flash_simulation_main.cpp  gpio_model.cpp  gpio_model.h  logger.cpp  logger.h  main.cpp  read_flash_simulation_main.cpp  read_simulation_main.cpp  read_then_write_simulation_main.cpp  reset_and_switch_to_swd_main.cpp  sim_api.h  stm32_swd_target.cpp  stm32_swd_target.h  write_simulation_main.cpp  write_then_read_simulation_main.cpp
sim/arduino_compat/: Arduino.h  arduino_compat.cpp
src/: binary.h  filename_normalizer.cpp  filename_normalizer.h  firmware_fs.cpp  firmware_fs.h  firmware_name_utils.cpp  firmware_name_utils.h  firmware_source.h  firmware_source_file.cpp  firmware_source_file.h  first_block_override_reader.cpp  first_block_override_reader.h  main.cpp  mode2_loop.cpp  mode2_loop.h  product_info_injector_reader.cpp  product_info_injector_reader.h  program_state.cpp  program_state.h  ram_log.cpp  ram_log.h  serial_log.cpp  serial_log.h  servomotor_upgrade.cpp  servomotor_upgrade.h  stm32g0_prog.cpp  stm32g0_prog.h  swd_min.cpp  swd_min.h  tee_log.cpp  tee_log.h  unit_context.cpp  unit_context.h  wifi_web_ui.cpp  wifi_web_ui.h
testdata/: expected_cmd_l_contains.txt  test_filename_normalizer.cpp  test_firmware_name_utils.cpp
tools/: compare_sniffs.py  esp32_runner.py  pio_fwfs_targets.py  plot_sniffer_gaps.py  rs485_sniffer.py  sniff1  sniff2  sniffer_timing_data.txt  stage_servomotor_assets.py
viewer/: view_log.py
